--- a/client/src/views/Book/styles.module.scss
+++ b/client/src/views/Book/styles.module.scss
@@ -1,8 +1,10 @@
 .container {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
 
-.create-book {
-  align-items: center;
+.pagination {
+  display: flex;
+  justify-content: center;
 }
